# rust2mojo

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT_FRAMEWORK.md  Makefile  PROJECT_SUMMARY.md  TEST_SPECIFICATION.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml  test_input.rs  test_types.rs
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.claude/: settings.json
.github/workflows/: ci.yml  msrv.yml  release.yml
.husky/: pre-commit
docs/: starting_prompt.txt
examples/: comparison_demo.rs
scripts/: analyze-msrv.sh  setup-dev-env.sh  update-msrv.sh
src/: ast.rs  codegen.rs  comparison.rs  error.rs  lib.rs  main.rs  parser.rs
tests/: contracts.rs  fuzzing.rs  integration_tests.rs  rust_language_spec.rs
